src/test/deca/syntax/parser/invalid/list_class_after_main.deca
// Parser test, class has to be before EmptyMain

{
    int x = 5;
}

class A {

}